@@ -14,6 +14,7 @@ import com.palmergames.bukkit.towny.event.DeleteTownEvent;
 import com.palmergames.bukkit.towny.event.DeleteNationEvent;
 import com.palmergames.bukkit.towny.exceptions.AlreadyRegisteredException;
 import com.palmergames.bukkit.towny.exceptions.EmptyNationException;
+import com.palmergames.bukkit.towny.exceptions.EmptyTownException;
 import com.palmergames.bukkit.towny.exceptions.InvalidNameException;
 import com.palmergames.bukkit.towny.exceptions.NotRegisteredException;
 import com.palmergames.bukkit.towny.exceptions.TownyException;
@@ -465,11 +466,17 @@ public final class TownyFlatFileSource extends TownyDatabaseHandler {
 								universe.unregisterResident(olderRes);
 							} catch (NotRegisteredException ignored) {}
 							// Check if the older resident is a part of a town
-							if (olderRes.hasTown()) {
+							Town olderResTown = olderRes.getTownOrNull();
+							if (olderResTown != null) {
 								try {
 									// Resident#removeTown saves the resident, so we can't use it.
-									olderRes.getTown().removeResident(olderRes);
-								} catch (NotRegisteredException ignored) {}
+									olderResTown.removeResident(olderRes);
+								} catch (EmptyTownException e) {
+									try {
+										universe.unregisterTown(olderResTown);
+									} catch (NotRegisteredException ignored) {}
+									deleteTown(olderResTown);
+								}
 							}
 							deleteResident(olderRes);					
 						} else {
@@ -481,7 +488,7 @@ public final class TownyFlatFileSource extends TownyDatabaseHandler {
 							save = false;
 							return true;
 						}
-					}					
+					}
 					resident.setUUID(uuid);
 					universe.registerResidentUUID(resident);
 				}
@@ -2518,7 +2525,6 @@ public final class TownyFlatFileSource extends TownyDatabaseHandler {
 		});
 	}
 
-	@SuppressWarnings("ReadWriteStringCanBeUsed")
 	@Override
 	public boolean loadCooldowns() {
 		final Path cooldownsFile = Paths.get(dataFolderPath).resolve("cooldowns.json");
@@ -2527,7 +2533,7 @@ public final class TownyFlatFileSource extends TownyDatabaseHandler {
 
 		final String data;
 		try {
-			data = new String(Files.readAllBytes(cooldownsFile), StandardCharsets.UTF_8);
+			data = Files.readString(cooldownsFile);
 		} catch (IOException e) {
 			plugin.getLogger().log(Level.WARNING, "An exception occurred when reading cooldowns.json", e);
 			return true;
@@ -2542,7 +2548,6 @@ public final class TownyFlatFileSource extends TownyDatabaseHandler {
 		return true;
 	}
 
-	@SuppressWarnings("ReadWriteStringCanBeUsed")
 	@Override
 	public boolean saveCooldowns() {
 		final JsonObject object = new JsonObject();
@@ -2552,7 +2557,7 @@ public final class TownyFlatFileSource extends TownyDatabaseHandler {
 		
 		this.queryQueue.add(() -> {
 			try {
-				Files.write(Paths.get(dataFolderPath).resolve("cooldowns.json"), new GsonBuilder().setPrettyPrinting().create().toJson(object).getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+				Files.writeString(Paths.get(dataFolderPath).resolve("cooldowns.json"), new GsonBuilder().setPrettyPrinting().create().toJson(object), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 			} catch (IOException e) {
 				plugin.getLogger().log(Level.WARNING, "An exception occurred when writing cooldowns.json", e);
 			}
